--- a/index.html
+++ b/index.html
@@ -36,6 +36,9 @@
             <span class="label">Name:</span> John Lemuel Cueto
         </div>
         <div class="info">
+            <span class="label">Birth Date:</span> October 21, 2001
+        </div>
+        <div class="info">
             <span class="label">Age:</span> 22
         </div>
         <div class="info">
